--- a/solution/index.html
+++ b/solution/index.html
@@ -17,12 +17,66 @@
             <h1 id="title">NET<span>FLIX</span></h1>
             <h3 id="description">Thank you for signing up to NetFlix. Tell me more about yourself.</h3> 
         </header>
-        
+        <section id="survey-form-container">
+            <form action="results.html" method="get">
+                <div class="input-box">
+                    <label for="name">Name:</label>
+                    <br>
+                    <input type="text" id="name" name="name" placeholder="Enter your name:"
+                </div>
+                <div class="input-box">
+                    <label for="age">Age:</label>
+                    <br>
+                    <input type="text" id="age" name="age" placeholder="Age:">
+                </div>
+                <div class="input-box">
+                    <label for="email">Email:</label>
+                    <br>
+                    <input type="email" id="email" name="email" placeholder="Enter your email:">
+                </div>
+                <div class="input-box">
+                    <label for="content">content Type</label>
+                    <br>
+                    <select name="content" id="dropdown">
+                        <option value="movie">Movies</option>
+                        <option value="series" selected>Series</option>
+                    </select>
+                </div>
+                <div class="input-box">
+                    <label for=" ">Movie Types:</label>
+                    <br>
+                    <input type="checkbox" name="movie" id="first-check" value="Comedy" checked>
+                    <label for="first-check">Comedy</label>
+                    <br>
+                    <input type="checkbox" name="movie" id="second-check" value="Action" checked>
+                    <label for="second-check">Action</label>
+                    <br>
+                    <input type="checkbox" name="movie" id="third-check" value="Romance">
+                    <label for="third-check">Romance</label>
+                </div>
+                <div class="input-box">
+                    <label>Gender:</label>
+                    <br>
+                    <input type="radio" name="gender" id="first-radio" value="Male">
+                    <label for="first-radio">Male</label>
+                    <br>
+                    <input type="radio" name="gender" id="second-radio" value="Female" checked>
+                    <label for="second-radio">Female</label>
+                    <br>
+                    <input type="radio" name="gender" id="third-radio" value="Other">
+                    <label for="third-radio">Other</label>
+                </div>
+                <div class="input-box">
+                    <label for="feedback">Feedback</label>
+                    <br>
+                    <textarea name="feedback" id="feedback" cols="50" rows="10" placeholder="your commect:"></textarea>
+                </div>
+                <div class="form-submit">
+                    <button type="submit" id="form-button">Submit</button>
+                </div>
+            </form>
+        </section>
     </div>
-
-
-
-
 
 </body>
 </html>
