CSS is completed

--- a/solution/index.html
+++ b/solution/index.html
@@ -20,22 +20,22 @@
         <section id="survey-form-container">
             <form action="results.html" method="get">
                 <div class="input-box">
-                    <label for="name">Name:</label>
+                    <label for="name">Name</label>
                     <br>
-                    <input type="text" id="name" name="name" placeholder="Enter your name:"
+                    <input type="text" id="name" name="name" placeholder="Enter your name:">
                 </div>
                 <div class="input-box">
-                    <label for="age">Age:</label>
+                    <label for="age">Age</label>
                     <br>
                     <input type="text" id="age" name="age" placeholder="Age:">
                 </div>
                 <div class="input-box">
-                    <label for="email">Email:</label>
+                    <label for="email">Email</label>
                     <br>
                     <input type="email" id="email" name="email" placeholder="Enter your email:">
                 </div>
                 <div class="input-box">
-                    <label for="content">content Type</label>
+                    <label for="content">Content Type</label>
                     <br>
                     <select name="content" id="dropdown">
                         <option value="movie">Movies</option>
@@ -43,24 +43,24 @@
                     </select>
                 </div>
                 <div class="input-box">
-                    <label for=" ">Movie Types:</label>
+                    <label for=" ">Movie Types</label>
                     <br>
                     <input type="checkbox" name="movie" id="first-check" value="Comedy" checked>
                     <label for="first-check">Comedy</label>
                     <br>
-                    <input type="checkbox" name="movie" id="second-check" value="Action" checked>
+                    <input type="checkbox" name="movie" id="second-check" value="Action">
                     <label for="second-check">Action</label>
                     <br>
                     <input type="checkbox" name="movie" id="third-check" value="Romance">
                     <label for="third-check">Romance</label>
                 </div>
                 <div class="input-box">
-                    <label>Gender:</label>
+                    <label>Gender</label>
                     <br>
                     <input type="radio" name="gender" id="first-radio" value="Male">
                     <label for="first-radio">Male</label>
                     <br>
-                    <input type="radio" name="gender" id="second-radio" value="Female" checked>
+                    <input type="radio" name="gender" id="second-radio" value="Female">
                     <label for="second-radio">Female</label>
                     <br>
                     <input type="radio" name="gender" id="third-radio" value="Other">
